<resources>
    <string name="app_name">Final_Project</string>
    <string name="get_started">Get Started</string>
    <string name="Welcome">Xin chào các TDTer</string>
    <string name="Username">Họ và tên</string>
    <string name="Password">Mật khẩu</string>
    <string name="Forgot_pass">Quên mật khẩu ?</string>
    <string name="Login">Đăng nhập</string>
    <string name="Do_not_account">Bạn không có tài khoản ?</string>
    <string name="Register_now">Đăng ký ngay nào</string>
    <string name="Send_mail">Please enter your email address You will receive a link to create a new password</string>
    <string name="Mail">Địa chỉ Email</string>
    <string name="Send">Gửi</string>
    <string name="change">Thay đổi mật khẩu</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="confirm">Xác nhận mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="add">Thêm</string>
    <string name="pay">Thanh toán</string>
    <string name="complete">Xác nhận</string>
    <string name="detal">Chi tiết</string>
    <string name="ship_address">Địa chỉ giao</string>
    <string name="Total">Tổng tiền</string>
    <string name="Choice">Hình thức thanh toán</string>
    <string name="phone_sotre">Số điện thoại cửa hàng</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="FoodName">Tên món</string>
    <string name="Type">Loại</string>
    <string name="Inggredient">Nguyên liệu</string>
    <string name="price">Giá</string>
    <string name="image">Hình ảnh</string>
    <string name="Post">Đăng</string>
    <string name="Name_account">Tên tài khoản</string>
    <string name="Num_account">Số tài khoản</string>
    <string name="Rate">Đánh giá</string>
    <string name="Comment">Bình luận</string>
    <string name="Home">Trang chủ</string>
    <string name="Account">Tài khoản</string>
    <string name="Cart">Vỏ hàng</string>
    <string name="Setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="rice_fragment">Rice_fragment</string>
    <string name="banhmi_fragment">Banhmi_fragment</string>
    <string name="drink_fragment">Drink_fragment</string>
    <string name="noodle_fragment">Noodle_fragment</string>
</resources>