<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background1">


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="190dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/intro_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_icon_main" />

    <TextView
        android:id="@+id/intro_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/Welcome"
        android:textColor="#FF9800"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">

        <TextView
            android:id="@+id/Text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_narrow"
            android:text="@string/Username"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editText_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.864" />

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/text_view_white"
            android:hint="Username"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.182" />

        <TextView
            android:id="@+id/Text_password"
            android:layout_width="93dp"
            android:layout_height="30dp"
            android:fontFamily="@font/archivo_narrow"
            android:text="@string/Password"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editText_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.959" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/text_view_white"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363" />

        <Button
            android:id="@+id/button"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:background="@drawable/button"
            android:text="@string/Login"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.645" />

        <TextView
            android:id="@+id/text_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot_pass"
            android:textColor="#FF5722"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.539" />

        <TextView
            android:id="@+id/text_not_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do_not_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.706" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="51dp"
            android:layout_height="17dp"
            android:text="@string/register"
            android:textColor="#F44336"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toEndOf="@+id/text_not_account"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.704" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>